LDEV-4588 Flash removed from authoring, learning and monitor

--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
@@ -75,11 +75,6 @@ node.child1.defaultName  =Sub idea 1
 node.child2.defaultName  =Sub idea 2
 node.instructor.label  =Instructor
 node.learner.label  =Learner
-local.title  =Text
-local.delete_question  =Are sure you want to delete?
-local.yes  =Yes
-local.no  =No
-local.node_creator  =Node creator
 label.planner.editing.advice  =Editing advice
 label.nogroups  =No groups found for activity.
 monitor.summary.date.restriction  =Deadline
@@ -94,9 +89,18 @@ monitor.summary.date.restriction.removed  =Deadline has been removed
 button.submit  =Finish
 label.mindmap.options  =Mindmap options
 label.activity.completion  =End of activity
-message.enableFlash  =Sorry, this activity requires the Adobe Flash Player plugin, which does not seem to be present in your browser. Nevertheless, you can continue with the next activities.
 message.enableJavaScript  =Sorry, enable javascript on your browser to use this activity.
-message.enableFlashAuthorMonitor  =Sorry, this activity requires the Adobe Flash Player plugin, which does not seem to be present in your browser.
 
-
+error.unable.to.load.mindmap=Unable to load data due from the server.  Please reload your page.
+error.occured.during.save=An error occurred while saving. Please reload your page.
+label.your.mindmap.saved.every.minute=Your Mindmap will be saved automatically every minute and when you press Finish.
+label.zoom=Zoom
+label.zoom.reset=Reset
+label.zoom.increase=+
+label.zoom.decrease=-
+label.add.idea=Add Idea
+label.edit.idea.text=Edit Idea Text
+label.delete.idea=Delete Idea
+label.expand.collapse.idea=Expand/Collapse Idea
+label.no.changes.can.be.made.reloading.ideas=No changes can be made to the mindmap. Reloading ideas.
 #======= End labels: Exported 91 labels for en AU =====
