LDEV-4588 Adding a colour picker

--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
@@ -95,9 +95,9 @@ error.unable.to.load.mindmap=Unable to load data due from the server.  Please re
 error.occured.during.save=An error occurred while saving. Please reload your page.
 label.your.mindmap.saved.every.minute=Your Mindmap will be saved automatically every minute and when you press Finish.
 label.zoom=Zoom
-label.zoom.reset=Reset
-label.zoom.increase=+
-label.zoom.decrease=-
+label.zoom.reset=100%
+label.zoom.increase=Zoom In
+label.zoom.decrease=Zoom Out
 label.add.idea=Add Idea
 label.edit.idea.text=Edit Idea Text
 label.delete.idea=Delete Idea
