LDEV-4593 Introduce Policies & consent feature

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -589,5 +589,36 @@ msg.delete.organisation.delete.lessons.confirm  =The course or one of its subcou
 config.kumalive.enable  =Enable Kumalive
 audit.remarks  =Remarks
 
+admin.policies.title  =Policies and consents
+admin.add.edit.policy  =Add/edit new policy
+label.name =Name
+label.policy.type =Policy type
+label.policy.status =Policy status
+label.version =Version
+label.last.modified =Last modified
+label.agreements =Agreements
+label.add.new.policy  =Add a new policy
+label.policy.status.hint  =An active policy will require consent from new users. Existing users will need to consent to this policy on their next log in.
+label.policy.status.active  =Active
+label.policy.status.inactive  =Inactive
+label.policy.status.draft  =Draft
+label.policy.type.site  =Site policy
+label.policy.type.privacy  =Privacy policy
+label.policy.type.third.party  =Third party policy
+label.policy.type.other  =Other policy
+label.summary  =Summary
+label.full.policy  =Full policy
+label.view.previous.versions =View previous versions
+label.set.status.to =Set status to "{0}"
+label.minor.change =Minor change
+label. =
+label. =
+label. =
+label. =
+label. =
+label. =
+label. =
+label. =
+label. =
 
 #======= End labels: Exported 582 labels for en AU =====
