--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -588,6 +588,7 @@ msg.delete.organisation.confirm  =You are about to permanently remove a course. 
 msg.delete.organisation.delete.lessons.confirm  =The course or one of its subcourses still contains lessons. They need to be permanently deleted first. You will be redirected to a page where you can do it.
 config.kumalive.enable  =Enable Kumalive
 audit.remarks  =Remarks
+config.allow.direct.access.for.integration.learners  =Allow direct access to main LAMS page for Integration Learners.
 
 
 #======= End labels: Exported 582 labels for en AU =====
