--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -458,5 +458,15 @@ email.notifications.archived.messages.list.sent.count  =Sent to
 email.notifications.archived.messages.list.learners  =learners
 label.gate.gate.open.user  =by {0}
 
-
+label.countdown.timer=Countdown Timer
+label.enter.countdown.time=Enter countdown time:
+label.start=Start
+label.countdown.time.left=Time Left:
+label.stop=Stop
+label.resume=Resume
+label.hours=Hours
+label.minutes=Minutes
+label.seconds=Seconds
+label.reset=Reset
+label.time.is.expired=Time has expired.
 #======= End labels: Exported 451 labels for en AU =====
