LDEV-4588: adding removing labels
In English, Greek and Spanish

--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:57:01 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:34:56 CST 2018 
  
 #=================== labels for Mindmap =================# 
 
@@ -75,11 +75,7 @@ node.child1.defaultName  =Sub idea 1
 node.child2.defaultName  =Sub idea 2
 node.instructor.label  =Instructor
 node.learner.label  =Estudiante
-local.title  =Texto
-local.delete_question  =\u00bfEst\u00e1 seguro de que desea eliminar?
 local.yes  =S\u00ed
-local.no  =No
-local.node_creator  =Creador del nodo
 label.planner.editing.advice  =Asesoramiento para edici\u00f3n
 label.nogroups  =No hay grupos para esta actividad.
 monitor.summary.date.restriction  =Restricci\u00f3n por fecha
@@ -94,9 +90,19 @@ monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
 button.submit  =Finalizar
 label.mindmap.options  =Options
 label.activity.completion  =Al finalizar actividad
-message.enableFlash  =Esta actividad require del la extension Adobe Flash Player en su browser. De todas formas puede continuar con las siguientes actividades.
 message.enableJavaScript  =Su browser no tiene habilitado javascript. Necesita esta funcionalidad para poder utilizar esta herramienta.
-message.enableFlashAuthorMonitor  =Esta herramienta necesita que su browser tenga instalado Adobe Flash Player.
+error.unable.to.load.mindmap  =No se ha podido cargar la informaci\u00f3n. Por favor reintente.
+error.occured.during.save  =Ha ocurrido un error al intentar guardar la informaci\u00f3n. Vuela a intentar.
+label.your.mindmap.saved.every.minute  =Sus ideas en el mapa se auto-guardaran cada minuto y cuando usted presione el bot\u00f3n de finalizar.
+label.zoom  =Zoom
+label.zoom.reset  =100%
+label.zoom.increase  =Acercar
+label.zoom.decrease  =Alejar
+label.add.idea  =A\u00f1adir idea
+label.edit.idea.text  =Editar el texto
+label.delete.idea  =Borrar idea
+label.expand.collapse.idea  =Expandir/colapsar idea
+label.no.changes.can.be.made.reloading.ideas  =No se pueden hacer cambios a este mapa de ideas. Volviendo a cargar el mapa.
 
 
-#======= End labels: Exported 91 labels for es ES =====
+#======= End labels: Exported 97 labels for es ES =====
