--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 12 09:35:20 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:28:06 CST 2018 
  
 #=================== labels for Mindmap =================# 
 
@@ -75,6 +75,7 @@ node.child1.defaultName  =Sub idea 1
 node.child2.defaultName  =Sub idea 2
 node.instructor.label  =Instructor
 node.learner.label  =Learner
+local.yes  =Yes
 label.planner.editing.advice  =Editing advice
 label.nogroups  =No groups found for activity.
 monitor.summary.date.restriction  =Deadline
@@ -90,17 +91,18 @@ button.submit  =Finish
 label.mindmap.options  =Mindmap options
 label.activity.completion  =End of activity
 message.enableJavaScript  =Sorry, enable javascript on your browser to use this activity.
+error.unable.to.load.mindmap  =Unable to load data due from the server. Please reload your page.
+error.occured.during.save  =An error occurred while saving. Please reload your page.
+label.your.mindmap.saved.every.minute  =Your Mindmap will be saved automatically every minute and when you press Finish.
+label.zoom  =Zoom
+label.zoom.reset  =100%
+label.zoom.increase  =Zoom In
+label.zoom.decrease  =Zoom Out
+label.add.idea  =Add Idea
+label.edit.idea.text  =Edit Idea Text
+label.delete.idea  =Delete Idea
+label.expand.collapse.idea  =Expand/Collapse Idea
+label.no.changes.can.be.made.reloading.ideas  =No changes can be made to the mindmap. Reloading ideas.
 
-error.unable.to.load.mindmap=Unable to load data due from the server.  Please reload your page.
-error.occured.during.save=An error occurred while saving. Please reload your page.
-label.your.mindmap.saved.every.minute=Your Mindmap will be saved automatically every minute and when you press Finish.
-label.zoom=Zoom
-label.zoom.reset=100%
-label.zoom.increase=Zoom In
-label.zoom.decrease=Zoom Out
-label.add.idea=Add Idea
-label.edit.idea.text=Edit Idea Text
-label.delete.idea=Delete Idea
-label.expand.collapse.idea=Expand/Collapse Idea
-label.no.changes.can.be.made.reloading.ideas=No changes can be made to the mindmap. Reloading ideas.
-#======= End labels: Exported 91 labels for en AU =====
+
+#======= End labels: Exported 97 labels for en AU =====
