LDEV-4054: Updating labels in various projects
English, Spanish and Greek

--- a/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:53:45 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:44:02 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -42,7 +42,7 @@ error.roles.invalid  =Uno o mas de los roles son invalidos {0}
 error.fail.add  =Error al a\u00f1adir usuario
 error.authmethod.invalid  =Metodo de autenticaci\u00f3n inv\u00e1lido
 error.locale.invalid  =Localizaci\u00f3n inv\u00e1lida {0}
-msg.user.add.to.parent.group  =Los usuario marcados con * seran automaticamente agregados al clase con los mismos roles
+msg.user.add.to.parent.group  =Los usuario se\u00f1alados con * ser\u00e1n autom\u00e1ticamente agregados al clase con los mismos roles
 msg.add.to.org  =El usuario sera agregado a {0}.
 msg.results.none  =No se encontraron resultados
 msg.users.added  ={0} usuarios fueron agregados a clases y grupos
@@ -103,7 +103,7 @@ role.AUTHOR.ADMIN  =Administrador Autor
 role.GROUP.ADMIN  =Administrador de la Clase
 role.GROUP.MANAGER  =Manager de la Clase
 role.LEARNER  =Estudiante
-role.MONITOR  =Tutor/Monitor
+role.MONITOR  =Instructor/Tutor
 role.SYSADMIN  =Administrador de Sistema
 label.member.of  =Miembro de
 label.with.roles  =Con roles
@@ -177,7 +177,7 @@ msg.remove.from.subgroups  =Usuarios eliminados de esta clase ser\u00e1n tambien
 label.global.roles  =Roles Globales
 label.import  =Importar
 msg.import.intro  =Puede importar usuarios usando la plantilla de Excel
-msg.import.1  =En la plantilla, las columnas marcadas con * son requeridos.
+msg.import.1  =En la plantilla, las columnas se\u00f1aladas con * son requeridos.
 msg.import.2  =Descargue la plantilla para crear usuarios.
 msg.import.conclusion  =Utilize el boton de ayudar para m\u00e1s informaci\u00f3n
 label.results.per.page  =Resultados por p\u00e1gina
@@ -270,8 +270,8 @@ config.ldap.security.protocol  =Protocolo de seguridad
 config.ldap.truststore.path  =SSL Certificate Path
 config.ldap.truststore.password  =Contrase\u00f1a del Certificado SSL
 config.ldap.learner.map  =Mapeo del Rol de Estudiante
-config.ldap.monitor.map  =Mapeo del Rol de Tutor/Monitor
-config.ldap.author.map  =Mapeo del Rol de Profesor/Autor
+config.ldap.monitor.map  =Mapeo del Rol de Instructor/Tutor
+config.ldap.author.map  =Mapeo del Rol de Instructor/Autor
 config.ldap.group.admin.map  =Mapeo del Rol de Administrador de clase
 config.ldap.group.manager.map  =Mapeo del Rol de Gestionador de Clase
 config.ldap.update.on.login  =Sincronizar al logearse
@@ -288,11 +288,11 @@ label.subgroups  =grupos
 heading.manage.group.users  =Administrar usuarios de {0}
 label.learners  =Estudiantes
 label.monitors  =Tutores
-label.authors  =Profesores
+label.authors  =Instructores
 label.group.managers  =Gestionadores de Clase
 label.group.admins  =Administradores de Clase
 label.sysadmins  =Administradores del Sistema
-label.author.admins  =Administradores de Profesores
+label.author.admins  =Administradores de Instructores
 heading.users  =Usuarios
 label.number.of.users  ={0} usuarios.
 heading.potential.users  =Potenciales usuarios
@@ -577,7 +577,7 @@ audit.change.made.by  =Cambios realizados por
 audit.change.made.to  =Cambios realizados a
 admin.delete.lessons  =Eliminar todas las lecciones
 msg.delete.all.lesson.confirm.1  =Est\u00e1 a punto de eliminar PERMANENTEMENTE TODAS las lecciones del curso "{0}". \u00bfEst\u00e1 ABSOLUTAMENTE seguro de que quiere hacer esto? \u00a1No habr\u00e1 vuelta atr\u00e1s!
-msg.delete.all.lesson.confirm.2  =TODAS las lecciones ser\u00e1n eliminadas, incluidas las activas con los alumnos en ellas. NO se dejar\u00e1n lecciones en el curso. \u00bfEst\u00e1 seguro de que quiere continuar?
+msg.delete.all.lesson.confirm.2  =TODAS las lecciones ser\u00e1n eliminadas, incluidas las activas con los estudiantes en ellas. NO se dejar\u00e1n lecciones en el curso. \u00bfEst\u00e1 seguro de que quiere continuar?
 msg.delete.all.lesson.error  =Error al eliminar lecciones de lecciones del curso
 label.delete.all.lesson.count  =Cantidad de lecciones restantes / total:
 label.delete.all.lesson.progress  =Eliminando...
@@ -588,6 +588,7 @@ msg.delete.organisation.confirm  =Est\u00e1 a punto de eliminar un curso de form
 msg.delete.organisation.delete.lessons.confirm  =El curso o uno de sus subcursos todav\u00eda contiene lecciones. Necesitan ser eliminados permanentemente primero. Ser\u00e1s redirigido a una p\u00e1gina donde puedes hacerlo.
 config.kumalive.enable  =Habilitar Kumalive
 audit.remarks  =Anotaciones
+config.allow.direct.access.for.integration.learners  =Permitir el acceso directo a la p\u00e1gina principal de LAMS para los estudiantes que son de integraciones.
 
 
-#======= End labels: Exported 582 labels for es ES =====
+#======= End labels: Exported 583 labels for es ES =====
