--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:47:14 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:51:11 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -195,7 +195,7 @@ error.forgot.password.username  =Please enter a username.
 button.select.another.importfile  =Select another file to import
 error.forgot.password.incorrect.key  =The request key is incorrect or has already been used. Please click the "Forgot your Password" link again to make a new request.
 lessonsearch.title  =Search learners in lesson
-lessonsearch.instuctions  =Please enter the login, first or last name of the learner. As you type the name of the matching learners will appear.
+lessonsearch.instuctions  =Please enter the login, first or last name of the learner.
 lessonsearch.results  =Lessons in which ''''{0}'''' has been found
 index.searchlesson  =Learner Search
 index.searchlesson.tooltip  =Search learners across lessons
@@ -755,7 +755,7 @@ audit.live.edit.end  =Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) 
 label.post.anonomously  =Post anonymously
 label.anonymous  =Anonymous
 label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
-authoring.fla.page.ld.title.desc=Click to display sequence details
+authoring.fla.page.ld.title.desc  =Click to display sequence details
 
 #====== Templates	
 authoring.msg.close.cancel.save=Do you want to close this window without saving?	
@@ -811,5 +811,5 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.	
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
-error.cannot.login.as.with.not.allow.direct.access=You cannot login as this user as they are an Integration Learner and 'Allow direct access to main LAMS page for Integration Learners' is turned off in the system configuration.
-#======= End labels: Exported 749 labels for en AU =====
+
+#======= End labels: Exported 750 labels for en AU =====
