--- a/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:47:13 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:51:10 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -755,6 +755,7 @@ audit.live.edit.end  =Edici\u00f3n en vivo del dise\u00f1o de aprendizaje "{0}" 
 label.post.anonomously  =Publicar an\u00f3nimamente
 label.anonymous  =An\u00f3nimo
 label.anonymous.tooltip  =Active "Publicar an\u00f3nimamente" para ocultar su nombre a otros estudiantes. Solo los instructores podr\u00e1n ver su nombre.
+authoring.fla.page.ld.title.desc  =Haga clic para mostrar los detalles de la secuencia
 
 
-#======= End labels: Exported 749 labels for es ES =====
+#======= End labels: Exported 750 labels for es ES =====
