--- a/lams_common/conf/language/lams/ApplicationResources.properties
+++ b/lams_common/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_common
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:45:28 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:49:32 CST 2018 
  
 #=================== labels for LAMS Common =================# 
 
@@ -72,6 +72,7 @@ audit.finished.editing.activity  =Teacher {0} has finished editing activity {1} 
 audit.cancelled.editing.activity  =Teacher {0} has cancelled editing activity {1} in monitor
 audit.tool.prefix  =Tool {0}:
 audit.change.initiated.by  =Change initiated by
+error.cannot.login.as.with.not.allow.direct.access  =You cannot login as this user as he/she is an Integration Learner and 'Allow direct access to main LAMS page for integration learners' is turned off in the system configuration.
 
 
-#======= End labels: Exported 66 labels for en AU =====
+#======= End labels: Exported 67 labels for en AU =====
