--- a/lams_common/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_common/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_common
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:18:02 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:49:02 CST 2018 
  
 #=================== labels for LAMS Common =================# 
 
@@ -66,12 +66,13 @@ email.notifications.tool  =herramienta
 email.notifications.activity  =actividad
 error.requires.existing.grouping  =Actividad {0} requiere que el usuario {1} este incluido en un grupo. Sin embargo, el usuario todavia no ha alcanzado la actividad de grupo.
 validation.error.GroupingNotUsed  =El grupo no se utiliza en ninguna de las actividades
-audit.change.mark  =Nota cambiado para el usuario {0}. Nota original: {1}, nota nueva: {2}
-audit.started.editing.activity  =el usuario {0} ha comenzado a editar la actividad {1} en monitoreo
-audit.finished.editing.activity  =el usuario {0} ha finalizado de editar la actividad {1} en monitoreo
-audit.cancelled.editing.activity  =el usuario {0} ha cancelado la edici\u00f3n de la actividad {1} en monitoreo
+audit.change.mark  =Nota cambiado para el usuario {0}. Puntaje original: {1}, puntaje nuevo: {2}
+audit.started.editing.activity  =el usuario {0} ha comenzado a editar la actividad {1} en seguimiento
+audit.finished.editing.activity  =el usuario {0} ha finalizado de editar la actividad {1} en seguimiento
+audit.cancelled.editing.activity  =el usuario {0} ha cancelado la edici\u00f3n de la actividad {1} en seguimiento
 audit.tool.prefix  =Herramienta {0}:
 audit.change.initiated.by  =Cambio iniciado por
+error.cannot.login.as.with.not.allow.direct.access  =No puede ingresar como este estudiante porque es un usuario de integraci\u00f3n. La opci\u00f3n de 'Permitir acceso a la p\u00e1gina principal de LAMS para estudiantes de integraci\u00f3n" no esta habilitada en la configuraci\u00f3n del sistema.
 
 
-#======= End labels: Exported 66 labels for es ES =====
+#======= End labels: Exported 67 labels for es ES =====
