--- a/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:48:32 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:42:24 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -313,7 +313,7 @@ tour.end.content.2  =Para obtener m\u00e1s ayuda, haga clic en el bot\u00f3n M\u
 tour.tab.selection.title  =Pesta\u00f1a seleccionar
 tour.tab.selection.content.1  =La interfaz de seguimiento se divide en tres \u00e1reas, a las que se accede mediante estos t\u00edtulos en la parte superior de la p\u00e1gina.
 tour.tab.selection.content.2  =<b>Lecci\u00f3n</b> proporciona los detalles generales de la leccio\u00f3n
-tour.tab.selection.content.3  =<b>Sequencia</b> proporciona una descripci\u00f3n general de la secuencia de la lecci\u00f3n y se usa para acceder a las actividades dentro de la lecci\u00f3n.
+tour.tab.selection.content.3  =<b>Sequencia</b> proporciona una visualizaci\u00f3n general del dise\u00f1o de la lecci\u00f3n y se usa para acceder a las actividades.
 tour.tab.selection.content.4  =<b>Estudiantes</b> muestran los detalles de progreso de cada estudiante.
 tour.tab.refresh.content  =Actualiza pantalla
 tour.lesson.state.content.1  =Haga clic en el estado actual para cambiar su estado. La lecci\u00f3n puede tener los siguientes estados: Iniciada, Suspendida, Archivada o Eliminada.
@@ -331,7 +331,7 @@ tour.lesson.im.content.2  =Una vez que la opci\u00f3n de Estudiantes conectados 
 tour.lesson.im.content.3  =Haga clic en Presencia y Mensajer\u00eda instant\u00e1nea de nuevo para deshabilitar opci\u00f3n.
 tour.lesson.im.content.4  =Vea los mensajes de los estudiantes usando <b>Mensajer\u00eda instant\u00e1nea</b>.
 tour.completion.chart.content  =El gr\u00e1fico muestra la proporci\u00f3n de estudiantes que no han comenzado la lecci\u00f3n, los que est\u00e1n en progreso o han completado la lecci\u00f3n. Despl\u00e1cese sobre las secciones de gr\u00e1fico para ver los porcentajes.
-tour.tab.sequence.content  =La pesta\u00f1a de secuencia le permite visualizar y controlar d\u00f3nde est\u00e1n los estudiantes en la secuencia o hacer cambios en la lecci\u00f3n.
+tour.tab.sequence.content  =La pesta\u00f1a de secuencia le permite visualizar y controlar d\u00f3nde est\u00e1n los estudiantes en la lecci\u00f3n o hacer cambios en el dise\u00f1o de la misma.
 tour.activity.content  =Haga doble clic en cualquier actividad para ver los detalles de esa actividad.
 tour.move.learners.title  =Ver y mover a los estudiantes
 tour.move.learners.small.content  =Si tiene un n\u00famero peque\u00f1o de estudiantes en una actividad, coloque el cursor sobre el icono de cada persona en una actividad para encontrar al estudiante correcto. Luego haga clic en el estudiante para abrir una vista de su actividad actual o haga clic y arrastre el icono para moverlo a otra actividad.
@@ -342,10 +342,10 @@ tour.completed.learners.content  =Los estudiantes finalizados aparecen en la par
 tour.learner.search.title  =Buscar estudiante
 tour.learner.search.content  =Ingrese un nombre, apellido o nombre de usuario para buscar un alumno.
 tour.live.edit.title  =Edici\u00f3n en vivo
-tour.live.edit.content  =Cambia la secuencia de la lecci\u00f3n. Solo puede cambiar las partes a las que a\u00fan no acceden los estudiantes, como agregar nuevas actividades m\u00e1s adelante en la secuencia.
+tour.live.edit.content  =Cambia el dise\u00f1o de la lecci\u00f3n. Solo puede cambiar las partes a las que a\u00fan no acceden los estudiantes, como agregar nuevas actividades m\u00e1s adelante en la lecci\u00f3n.
 tour.tab.learners.content  =<b>Estudiantes</b> muestra el desglose de progreso por cada estudiante.
 tour.learners.progress.content.1  =Los c\u00edrculos azules indican actividades que el estudiante ya ha completado.
-tour.learners.progress.content.2  =Los cuadrados rojos indican la posici\u00f3n actual del estudiante en la secuencia.
+tour.learners.progress.content.2  =Los cuadrados rojos indican la posici\u00f3n actual del estudiante en la lecci\u00f3n.
 tour.learners.progress.content.3  =Los tri\u00e1ngulos verdes representan actividades a\u00fan no alcanzadas.
 tour.completion.sorting.title  =Ordenar
 tour.completion.sorting.content  =Active para ordenar en funci\u00f3n del finalizaci\u00f3n o desactive para ordenar alfab\u00e9ticamente.
