--- a/lams_tool_nb/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_nb/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = noticeboard
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:16:46 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:41:22 CST 2018 
  
 #=================== labels for Noticeboard =================# 
 
@@ -60,6 +60,7 @@ advanced.comments.like.only  =\u039c\u03bf\u03c5 \u03b1\u03c1\u03ad\u03c3\u03b5\
 advanced.comments.like.and.dislike  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u039c\u03bf\u03c5 \u03b1\u03c1\u03ad\u03c3\u03b5\u03b9 \u03ba\u03b1\u03b9 \u0394\u03b5\u03bd \u03bc\u03bf\u03c5 \u03b1\u03c1\u03ad\u03c3\u03b5\u03b9
 advanced.comment.header  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03c3\u03c7\u03bf\u03bb\u03af\u03c9\u03bd
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+advanced.enable.anonymous.posts  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03b1\u03bd\u03ce\u03bd\u03c5\u03bc\u03c9\u03bd \u03b1\u03bd\u03b1\u03c1\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd
 
 
-#======= End labels: Exported 54 labels for el GR =====
+#======= End labels: Exported 55 labels for el GR =====
