--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu May 03 18:20:59 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:44:04 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -588,7 +588,7 @@ msg.delete.organisation.confirm  =You are about to permanently remove a course. 
 msg.delete.organisation.delete.lessons.confirm  =The course or one of its subcourses still contains lessons. They need to be permanently deleted first. You will be redirected to a page where you can do it.
 config.kumalive.enable  =Enable Kumalive
 audit.remarks  =Remarks
-config.allow.direct.access.for.integration.learners  =Allow direct access to main LAMS page for Integration Learners.
+config.allow.direct.access.for.integration.learners  =Allow direct access to main LAMS page for integration learners.
 
 
-#======= End labels: Exported 582 labels for en AU =====
+#======= End labels: Exported 583 labels for en AU =====
