LDEV-4601 Schedule the end date when teacher creates a lesson.

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -335,7 +335,7 @@ label.tab.advanced.split.desc  =[0] instances of this lesson will be created and
 label.tab.conditions.dependencies  =Dependencies
 label.tab.conditions.dependencies.desc  =Select a lesson that learners will need to complete before they can see the lesson you are about to create.
 label.tab.conditions.timelimit  =Time limitations
-label.tab.conditions.timelimit.desc  =Set the number of days the lesson will be available to learners. After this period the lesson will no longer be shown. If the time should count from the moment the learner starts the lesson, select the option for individual time limit.
+label.tab.conditions.timelimit.desc  =Set the number of days the lesson will be available to learners. After this period the lesson will no longer be shown. If the time should count from the moment the learner starts the lesson, select the option for individual time limit. <b>If you are scheduling the lesson end on the Advanced tab then you can only set an individual time limit.</b>
 label.tab.conditions.timelimit.days  =Number days:
 label.tab.conditions.timelimit.individual  =Is this time limit for each individual?
 label.tab.conditions.enable  =Enable
