--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -469,4 +469,8 @@ label.minutes=Minutes
 label.seconds=Seconds
 label.reset=Reset
 label.time.is.expired=Time has expired.
+
+lesson.end=End:
+error.lesson.end.date.must.be.after.start.date=Scheduled end date must be after the start date.
+
 #======= End labels: Exported 451 labels for en AU =====
