--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -335,7 +335,7 @@ label.tab.advanced.split.desc  =[0] instances of this lesson will be created and
 label.tab.conditions.dependencies  =Dependencies
 label.tab.conditions.dependencies.desc  =Select a lesson that learners will need to complete before they can see the lesson you are about to create.
 label.tab.conditions.timelimit  =Time limitations
-label.tab.conditions.timelimit.desc  =Set the number of days the lesson will be available to learners. After this period the lesson will no longer be shown. If the time should count from the moment the learner starts the lesson, select the option for individual time limit.
+label.tab.conditions.timelimit.desc  =Set the number of days the lesson will be available to learners. After this period the lesson will no longer be shown. If the time should count from the moment the learner starts the lesson, select the option for individual time limit. <b>If you are scheduling the lesson end on the Advanced tab then you can only set an individual time limit.</b>
 label.tab.conditions.timelimit.days  =Number days:
 label.tab.conditions.timelimit.individual  =Is this time limit for each individual?
 label.tab.conditions.enable  =Enable
@@ -811,5 +811,8 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.	
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
-
+label.start=Start:
+label.end=End:
+error.lesson.with.scheduled.end.only.have.individual.limits=Lessons with a scheduled end date can only have individual time limits, not a lesson time limit.
+error.lesson.end.date.must.be.after.start.date=Scheduled end date must be after the start date.
 #======= End labels: Exported 750 labels for en AU =====
