--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -224,5 +224,6 @@ label.print  =Print
 label.teams.notuppercase  =Teams
 label.authoring.advanced.show.scratchies.in.results  =Show results to learners after completion
 
+label.scroll.down.to.burning.question  =Scroll down to corresponding burning question
 
 #======= End labels: Exported 217 labels for en AU =====
