--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -225,5 +225,7 @@ label.teams.notuppercase  =Teams
 label.authoring.advanced.show.scratchies.in.results  =Show results to learners after completion
 
 label.scroll.down.to.burning.question  =Scroll down to corresponding burning question
+label.expand.all  =Expand all
+label.collapse.all  =Collapse all
 
 #======= End labels: Exported 217 labels for en AU =====
