LDEV-4607 Remove marks on output change to "none" in monitoring

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -289,6 +289,7 @@ label.ask.for.hedging.justification  =Ask for hedging justification?
 label.number.learners.per.session  =Number of learners per session
 label.tool.output  =Tool Output
 output.desc.best.score  =Best score
+output.desc.none =No score
 label.tool.output.has.been.changed  =Tool Output has been changed
 output.desc.first.score  =First score
 output.desc.average.score  =Average score
