--- a/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
@@ -148,6 +148,7 @@ label.monitoring.noDisplayAnswers2  =Do you want to allow learners to see the an
 button.monitoring.yes  =Yes
 output.desc.learner.all.correct.true  =All correct
 output.desc.learner.all.correct.false  =Not all correct
+output.desc.none =No score
 label.monitoring.downloadMarks.button  =Export marks
 label.monitoring.downloadMarks.question.mark  =Question {0} (mark: {1})
 label.monitoring.downloadMarks.username  =Username
