LDEV-4607 Show "no score" gradebook output option in authoring

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -599,6 +599,7 @@ authoring.fla.page.prop.groups.equal  =Equal group sizes?
 authoring.fla.page.prop.groups.view.learners  =View learners before selection?
 authoring.fla.page.prop.groups.name  =Name Groups
 authoring.fla.page.prop.gradebook  =Gradebook output:
+authoring.fla.page.prop.gradebook.none =No score
 authoring.fla.page.prop.description  =Description:
 authoring.fla.page.prop.gate.type  =Type:
 authoring.fla.page.prop.gate.type.condition  =Condition
