LDEV-4607 Confirm delete marks on output change in monitoring

--- a/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
@@ -199,6 +199,7 @@ label.select.leader  =Select leader
 label.question.options  =Question options
 label.activity.completion  =End of activity
 label.tool.output  =Tool output
+warn.tool.output.change.none =This will delete all existing marks for this activity. Are you sure?
 label.tool.output.has.been.changed  =Tool output has changed
 label.operation.failed  =Operation failed
 answers.submitted.none  =Select at least one answer for each of the questions.
