LDEV-4593 Further develop Policies & consents feature

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -596,12 +596,11 @@ label.policy.type =Policy type
 label.policy.status =Policy status
 label.version =Version
 label.last.modified =Last modified
-label.agreements =Agreements
+label.consents =Consents
 label.add.new.policy  =Add a new policy
 label.policy.status.hint  =An active policy will require consent from new users. Existing users will need to consent to this policy on their next log in.
 label.policy.status.active  =Active
 label.policy.status.inactive  =Inactive
-label.policy.status.draft  =Draft
 label.policy.type.site  =Site policy
 label.policy.type.privacy  =Privacy policy
 label.policy.type.third.party  =Third party policy
@@ -611,11 +610,11 @@ label.full.policy  =Full policy
 label.view.previous.versions =View previous versions
 label.set.status.to =Set status to "{0}"
 label.minor.change =Minor change
-label. =
-label. =
-label. =
-label. =
-label. =
+label.create.new.draft =Create a new draft
+label.policy.consents =Policy consents
+label.consented =Consented?
+label.consented.on =Consented on
+label.user.consents =User consents
 label. =
 label. =
 label. =
