LDEV-4593 Further develop Policies & consents feature

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -608,16 +608,14 @@ label.policy.type.other  =Other policy
 label.summary  =Summary
 label.full.policy  =Full policy
 label.view.previous.versions =View previous versions
-label.set.status.to =Set status to "{0}"
+label.activate =Activate
+label.deactivate =Deactivate
 label.minor.change =Minor change
 label.create.new.draft =Create a new draft
 label.policy.consents =Policy consents
 label.consented =Consented?
 label.consented.on =Consented on
 label.user.consents =User consents
-label. =
-label. =
-label. =
-label. =
+label.user.full.name =Full name
 
 #======= End labels: Exported 582 labels for en AU =====
