LDEV-4593 Further develop Policies & consents feature
* Remove "Create a new draft" functionality
* Add policy details page

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -822,6 +822,7 @@ label.policies.consents  =Policies and consents
 label.version =Version
 label.consented =Consented?
 label.consented.on =Consented on
+label.policy.details =Policy details
 
 	
 #=================== Specific to Team Based Learning (TBL) =========================#	
