LDEV-4593: small UI changes
Adding a new label to explain the scope of minor changes to policies

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -589,6 +589,7 @@ msg.delete.organisation.delete.lessons.confirm  =The course or one of its subcou
 config.kumalive.enable  =Enable Kumalive
 audit.remarks  =Remarks
 config.allow.direct.access.for.integration.learners  =Allow direct access to main LAMS page for integration learners.
+label.policy.minor.change.hint =Minor changes are meant to be wording changes that do not affect the meaning of the policy. If this option is not checked, then a new version of the policy will be created and users will be required to consent to this new policy version. 
 
 
 #======= End labels: Exported 583 labels for en AU =====
