--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -35,6 +35,9 @@ gradebook.columntitle.competences  =Competencies
 gradebook.columntitle.averageTimeTaken  =Median time taken:
 gradebook.columntitle.averageMark  =Average mark
 gradebook.columntitle.learnerName  =Name
+gradebook.columntitle.attempt =Attempt #
+gradebook.columntitle.restart =Restart date
+gradebook.columntitle.lesson.mark =Lesson mark
 gradebook.function.window.showColumns  =Show/Hide columns
 gradebook.function.error.enterNumber  =Please enter a number value
 gradebook.function.search.title  =Search grid
@@ -118,6 +121,5 @@ label.hide.lessons.to.export  =Hide lessons to export
 label.activity.marks.weighted  =(Activity Marks Weighted)
 gradebook.export.max.time.taken.seconds  =Maximum time taken (seconds)
 gradebook.export.min.time.taken.seconds  =Minimum time taken (seconds)
-
 
 #======= End labels: Exported 112 labels for en AU =====
